# Ring-Textilservice-prototype

./: .gitignore  Makefile  QUICKSIGHT_MANUAL_SETUP.md  README.md  deploy.sh  destroy.sh  pyproject.toml
src/db/: deploy_schema.py  schema.sql
src/glue/: glue_job.py
src/lambda/: deploy_schema.py  lambda_function.py  upsert_data.py
src/lambda/layers/: build_layer.sh
src/lambda/layers/python/psycopg2_binary-2.9.10.dist-info/: RECORD
terraform/: main.tf  outputs.tf  variables.tf
terraform/modules/compute/: main.tf  outputs.tf  variables.tf
terraform/modules/networking/: main.tf  outputs.tf  variables.tf
terraform/modules/quicksight/: main.tf  outputs.tf  variables.tf
terraform/modules/secretsmanager/: main.tf  output.tf  variables.tf
terraform/modules/step_functions/: main.tf  outputs.tf  variables.tf
terraform/modules/storage/: main.tf  outputs.tf  variables.tf
terraform/modules/triggers/: main.tf  variables.tf
